--- a/css/styles.css
+++ b/css/styles.css
@@ -39,17 +39,20 @@ h1 {
 .card {
     background-color: rgb(15, 14, 23);
     width: calc(100% / 3 - 20px);
+    height: 6em;
     float: left;
     margin: 0px 10px;
 }
 
 .foto-profilo {
     width: 30%;
+    height: 100%;
     float: left;
 }
 
 .foto-profilo img {
     width: 100%;
+    height: 100%;
 }
 
 .personal-info {
