--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     font-family: 'Fredoka', sans-serif;
     width: 80%;
     margin: 10px auto;
+    max-width: 1170px;
 }
 
 h1 {
@@ -42,21 +43,25 @@ h1 {
     height: 6em;
     float: left;
     margin: 0px 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
 }
 
 .foto-profilo {
     width: 30%;
     height: 100%;
     float: left;
+    display: block;
 }
 
 .foto-profilo img {
     width: 100%;
     height: 100%;
+    display: block;
 }
 
 .personal-info {
-    padding: 15px 0px 15px 35%;
+    height: 100%;
+    padding: 5px 0px 5px 35%;
 }
 
 .name, .role {
@@ -66,6 +71,10 @@ h1 {
 .mail {
     color: skyblue;
 }
+
+.name {
+    font-weight: 700;
+} 
 
 .personal-info > * {
     margin: 5px 0;
